--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -41,8 +41,7 @@ jobs:
   test:
     uses: hpcflow/github-support/.github/workflows/test-impl.yml@main
     with:
-{% raw %}
-      pre_commit: ${{ github.event_name == 'pull_request' || github.event.inputs.pre_commit }}
+      {% raw %}pre_commit: ${{ github.event_name == 'pull_request' || github.event.inputs.pre_commit }}
       unit_tests: ${{ github.event_name == 'pull_request' || github.event.inputs.unit_tests }}
       integration_tests: ${{ github.event_name == 'pull_request' || github.event.inputs.integration_tests }}
       invocation_tests: ${{ github.event_name == 'pull_request' || github.event.inputs.invocation_tests }}
@@ -50,8 +49,7 @@ jobs:
       integration_test_args: ${{ github.event.inputs.integration_test_args }}
       ref: ${{ github.ref }}
       head-ref: ${{ github.head_ref }}
-      full-repo-name: ${{ github.event.pull_request.head.repo.full_name }}
-{% endraw %}
+      full-repo-name: ${{ github.event.pull_request.head.repo.full_name }}{% endraw %}
       app_package: {{ app_package }}
       CLI_module: {{ CLI_module }}
       CLI_path: {{ CLI_path }}
