--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -4,22 +4,22 @@ on:
   workflow_dispatch: # manual invocation
     inputs:
       pre_commit:
-        description: "Run pre-commit."
+        description: "Run pre-commit?"
         required: true
         type: boolean
         default: true
       unit_tests:
-        description: "Run unit tests"
+        description: "Run unit tests?"
         required: true
         type: boolean
         default: true
       invocation_tests:
-        description: "Run invocation tests."
+        description: "Run invocation tests?"
         required: true
         type: boolean
         default: true
       integration_tests:
-        description: "Run integration-like workflow submission tests."
+        description: "Run integration-like workflow submission tests?"
         required: true
         type: boolean
         default: true
